--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,94 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="refresh()">
+      <ion-icon name="refresh-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="onSetupClick()">
+      <ion-icon name="settings-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div *ngIf="isSetup">
+      <ion-card>
+        <ion-card-content>
+          <ion-row>
+            <ion-col size="12" size-md="6" offset-md="3">
+              <ion-item lines="none">
+                <ion-button expand="block">
+                  <input style="" type="file" (change)="loadFromDevice($event)" id="file-input"
+                  accept=".xlsx, .xls">
+                  upload
+                </ion-button>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12" size-md="6" offset-md="3">
+              <ion-item>
+                <ion-select [(ngModel)]="selectedSheet" (ionChange)="onSelectSheet()" placeholder="Select Sheet">
+                  <ion-select-option *ngFor="let sheet of sheets" [value]="sheet">{{sheet}}
+                  </ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12" size-md="6" offset-md="3">
+              <ion-item>
+                <ion-select [(ngModel)]="selectedField" multiple=true placeholder="Select field to Display">
+                  <ion-select-option *ngFor="let field of allField" [value]="field">{{field}}
+                  </ion-select-option>
+                </ion-select>
+              </ion-item>
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="12" size-md="6" offset-md="3">
+              <ion-button (click)="isSetup=false" expand="block" shape="round">
+                Done
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+      
+    </div>
+   <ion-row>
+    <ion-col size="12" size-md="6" offset-md="3">
+      <ion-card>
+        <ion-card-content>
+          <ion-row *ngIf="!luckyDraw">
+            <ion-col size="6" offset="3">
+              <ion-button (click)="randomITS()" color="success" expand="block" shape="round">
+                Draw
+              </ion-button>
+            </ion-col>
+          </ion-row>
+          <ion-row *ngIf="!data">
+            <ion-col size="6" offset="3">
+              <ion-text color="warning">
+                <h3>No Data, Kindly setup the data first</h3>
+              </ion-text>
+            </ion-col>
+          </ion-row>
+          <div *ngIf="luckyDraw">
+            <ion-row>
+              <ion-col style="text-align: center;">
+                <ion-text color="success">
+                  <h1>Congratulation</h1>
+                </ion-text>
+                <ion-text color="success">
+                  <h1 *ngFor="let field of selectedField">{{field}}- {{luckyDraw[field]}}</h1>
+                </ion-text>
+              </ion-col>
+            </ion-row>
+          </div>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+   </ion-row>
   </div>
 </ion-content>
